--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PersonalSite</title>
+  <title>Charles Barnes - developer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Charles Barnes - Developer in St. Louis, Mo | charles@charlesabarnes.com">
+  <meta property="og:description" content="Developer in St. Louis, Mo" />
+  <meta name="keywords" content="HTML,CSS,JavaScript,Charles,Barnes,web,developer,website,development,Missouri,Charles Barnes,Saint Louis Developer,St louis">
+  <meta name="author" content="Charles Barnes">
 </head>
 <body>
   <app-root>
