--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Charles Barnes - developer</title>
-  <base href="/">
+  <base href=".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="description" content="Charles Barnes - Developer in St. Louis, Mo | charles@charlesabarnes.com">
